--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" >
+    <link rel="stylesheet" href="css/style.css" >
     <title>Document</title>
   </head>
 
@@ -96,7 +96,7 @@
               alt="Rich dad, Poor Dad"
               width="250"
               height="200"
-            /><span class="rich-dad">Багатий тато бідний тато</span>
+            ><span class="rich-dad">Багатий тато бідний тато</span>
           </li>
           <li>
             <img
@@ -104,7 +104,7 @@
               alt="48 Законів влади"
               width="250"
               height="200"
-            /><span class="second-book">48 Законів влади</span>
+            ><span class="second-book">48 Законів влади</span>
           </li>
         </ul>
         Та багато подібноі літератури
