--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8"  >
+    <link rel="stylesheet" href="css/style.css" >
     <title>Document</title>
   </head>
   <body>
@@ -24,16 +24,15 @@
         <div>body 2</div>
         <div>body 3</div>
         <div>body 4</div>
+      </div>
+      <div class="footer">
+        <div>
+          footer 1
+          <div>subfooter 1</div>
         </div>
-        <div class="footer">
-          <div>
-            footer 1
-            <div>subfooter 1</div>
-          </div>
-          <div>footer 2</div>
-          <div>footer 3</div>
-          <div>footer 4</div>
-        </div>
+        <div>footer 2</div>
+        <div>footer 3</div>
+        <div>footer 4</div>
       </div>
     </div>
   </body>
